[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/UI/bg.png" type="Texture" id=1]
[ext_resource path="res://scripts/audio.gd" type="Script" id=2]

[node name="audio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 129.0
margin_top = 117.0
margin_right = 350.0
margin_bottom = 153.0

[node name="Game Audio" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 221.0
margin_bottom = 16.0
custom_constants/separation = 16

[node name="Gameaudio" type="Label" parent="CenterContainer/VBoxContainer/Game Audio"]
margin_top = 1.0
margin_right = 79.0
margin_bottom = 15.0
text = "Game Audio"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Game Audio"]
margin_left = 95.0
margin_top = 1.0
margin_right = 103.0
margin_bottom = 15.0
text = "0"

[node name="GA_audio" type="HSlider" parent="CenterContainer/VBoxContainer/Game Audio"]
margin_left = 119.0
margin_right = 219.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 16 )
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game music" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 221.0
margin_bottom = 36.0
custom_constants/separation = 16

[node name="Gamemusic" type="Label" parent="CenterContainer/VBoxContainer/Game music"]
margin_top = 1.0
margin_right = 81.0
margin_bottom = 15.0
text = "Game music"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Game music"]
margin_left = 97.0
margin_top = 1.0
margin_right = 105.0
margin_bottom = 15.0
text = "0"

[node name="GM_audio" type="HSlider" parent="CenterContainer/VBoxContainer/Game music"]
margin_left = 121.0
margin_right = 221.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 16 )
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_top = -86.0
margin_right = 35.0
margin_bottom = -66.0
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="CenterContainer/VBoxContainer/Game Audio/GA_audio" to="." method="_on_GA_audio_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/Game music/GM_audio" to="." method="_on_GM_audio_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
